Fixed intro buttons visibility on back nav

--- a/portfolio.css
+++ b/portfolio.css
@@ -54,8 +54,6 @@ body {
 
 .menu {
 	width: 100%;
-	position: fixed;
-	top: 0;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -112,6 +110,7 @@ body {
 
 .fade {
 	opacity: 0;
+	animation: fadein 1s forwards ease-in 2200ms;
 }
 
 .button1 {
